Fix image alignmet in posts

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -33,6 +33,7 @@
 }
 
 .post-content img {
+  display: block;
   margin-left: auto;
   margin-right: auto;
   max-height: 300px;
